<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园漂流瓶</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pleaseInputName">请输入账号</string>
    <string name="pleaseInputPassword">请输入密码</string>
    <string name="remberPassword">记住密码</string>
    <string name="login">登录</string>
    <string name="find">查找</string>
    <string name="pleaseInputSearchWord">请输入文字以便帮你打捞瓶子</string>
    <string name="registerLogin">注册登录</string>
    <string name="logOff">注销</string>
    <string name="throwGlass">扔瓶子</string>
    <string name="IhaveWordsToSay">我有话要说</string>
    <string name="throwIt">扔了</string>
    <string name="throwBack">扔回去</string>
    
</resources>
