<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#0099cc" >
    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pleaseInputName"
        android:textColor="#000"
        android:inputType="number"
        android:background="#fff"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/loginTextSize"
        android:padding="@dimen/loginPadding"
        android:layout_marginLeft="@dimen/loginLayoutMarginLeft"
        android:layout_marginRight="@dimen/loginLayoutMarginLeft"
        android:layout_marginTop="@dimen/loginLayoutMarginTop"
        android:layout_marginBottom="@dimen/loginLayoutMarginTop"/>
    
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pleaseInputPassword"
        android:textColor="#000"
        android:inputType="textPassword"
        android:textCursorDrawable="@null"
        android:background="#fff"
        android:textSize="@dimen/loginTextSize"
        android:padding="@dimen/loginPadding"
        android:layout_marginLeft="@dimen/loginLayoutMarginLeft"
        android:layout_marginRight="@dimen/loginLayoutMarginLeft"
        android:layout_marginTop="@dimen/loginLayoutMarginTop"
        android:layout_marginBottom="@dimen/loginLayoutMarginTop" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/loginPadding"
        android:layout_marginLeft="@dimen/loginLayoutMarginLeft"
        android:layout_marginRight="@dimen/loginLayoutMarginLeft"
        android:layout_marginTop="@dimen/loginLayoutMarginTop"
        android:layout_marginBottom="@dimen/loginLayoutMarginTop"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_weight="1"
            android:onClick="login" />
        
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerLogin"
            android:layout_weight="1"
            android:onClick="register" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remberPassword"
            android:layout_weight="1"
            android:layout_marginLeft="10dp" />

    </LinearLayout>
</LinearLayout>
